Major UI upgrades for long read data